--- a/src/main/aboutme/a-content/a-content.css
+++ b/src/main/aboutme/a-content/a-content.css
@@ -15,7 +15,7 @@
     background-image: url(/src/assests/about/profile-6.jpg);
     background-repeat: no-repeat;
     background-size: cover;
-    border-radius: 5px;
+    border-radius: 10px;
 }
 /* .a-img-card {
     border: 8px double black;
@@ -174,12 +174,8 @@ color: white;
     }
 }
 @media screen and (max-width:535px) {
-    .a-container{
-        margin: 20px;
-        gap: 10px;
-    }
     .a-img-card{
-        height:250px;
+        height:230px;
         width: 400px;
         background-size: contain;
     }
@@ -201,37 +197,38 @@ color: white;
 }
 
 @media screen and (max-width:430px) {
-    .a-container{
-        margin: 20px;
-    }
+ 
     .a-img-card{
         height:180px;
-        width: 350px;
+        width: 325px;
         background-size: contain;
     }
     .a-para-card{
         height: 350px;
-        width: 350px;
+        width: 330px;
     }
     .a-para-card small{
-        margin-left: 40px;
+        margin-left: 20px;
     }
     .receiving-text h3{
      font-size: 10px;
      width: 180px;
-     margin-left: 140px;
+     margin-left: 120px;
     }
     .a-para-content{
         font-size: 10px;
     }
+    .a-para-card small{
+        margin-left: 70px;
+        width: 50%;
+        text-align: center;
+    }
 }
 
 @media screen and (max-width:375px) {
-    .a-container{
-        margin: 20px;
-    }
+  
     .a-img-card{
-        height:200px;
+        height:140px;
         width: 250px;
         background-size: contain;
     }
@@ -262,12 +259,10 @@ color: white;
     }
 }
 @media screen and (max-width:325px) {
-    .a-container{
-        margin: 20px;
-    }
+   
     .a-img-card{
-        height:180px;
-        width: 225px;
+        height:140px;
+        width: 250px;
         background-size: contain;
     }
     .a-para-card{
@@ -293,15 +288,20 @@ color: white;
       height: 40px;
       padding-top:8px;
     }
+    .a-para-card small{
+        margin-left: 60px;
+        width: 50%;
+        text-align: center;
+    }
+    
 }
 @media screen and (max-width:296px) {
-    .a-container{
-        margin: 20px;
-    }
     .a-img-card{
-        height:175px;
-        width: 200px;
+        height:140px;
+        width: 250px;
+        background-size: contain;
     }
+   
     .a-para-card{
         height: 350px;
         width: 250px;
