--- a/src/main/projects/t-projects/t-projects.css
+++ b/src/main/projects/t-projects/t-projects.css
@@ -15,13 +15,22 @@
     -webkit-text-stroke: 1.5px #040404;
     font-size: 50px;
     padding-top: 60px;
-    margin-bottom: 30px;
+    margin-bottom: 5px;
 } 
 .projects-title span{
     color: rgb(33, 29, 28);
     -webkit-text-stroke: 1px #0b0a0a;   
-}  
+} 
+.credentials-text{
+    margin-bottom: 15px;
 
+}
+.title-pro{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+}
 @media screen and (max-width:768px) {
     .projects-title{
         padding-top:0;
