--- a/src/main/aboutme/a-content/a-content.css
+++ b/src/main/aboutme/a-content/a-content.css
@@ -73,7 +73,7 @@
 }
 
 .title::before{
-    content: 'I am a proficient MERN stack developer...,I am well-versed in utilizing MongoDB,Express.js, React.js, and Node.js to craft visually appealing, functionally sound, and highly performant web applications.';
+    content: 'I am  a MERN Developer with 1.5 years Exp   ..,I am well-versed in utilizing MongoDB,Express.js, React.js, and Node.js to craft visually appealing, functionally sound, and highly performant web applications.';
     position: absolute;
     width: 100%;
     height: 100%;
